--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home Page</title>
     <title>home page student page</title>
     <!-- css linking -->
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <!-- google linking -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet">
