--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
     <section class="section-classes">
         <h2 class="title">Lives Classes <div class="circle"></div></h2>
         <div class="class-box">
-            <figure class="img-box"><img src="./images/teaching-1.jpeg" alt="teaching" class="img"></figure>
-            <figure class="img-box"><img src="./images/teaching-2.jpeg" alt="teaching" class="img"></figure>
-            <figure class="img-box"><img src="./images/teaching-3.jpeg" alt="teaching" class="img"></figure>
-            <figure class="img-box"><img src="./images/teaching-4.jpeg" alt="teaching" class="img"></figure>
-            <figure class="img-box"><img src="./images/teaching-5.jpeg" alt="teaching" class="img"></figure>
+            <figure class="img-box js-scroll slide-up"><img src="./images/teaching-1.jpeg" alt="teaching" class="img"></figure>
+            <figure class="img-box js-scroll slide-up"><img src="./images/teaching-2.jpeg" alt="teaching" class="img"></figure>
+            <figure class="img-box js-scroll slide-up"><img src="./images/teaching-3.jpeg" alt="teaching" class="img"></figure>
+            <figure class="img-box js-scroll slide-up"><img src="./images/teaching-4.jpeg" alt="teaching" class="img"></figure>
+            <figure class="img-box js-scroll slide-up"><img src="./images/teaching-5.jpeg" alt="teaching" class="img"></figure>
         </div>
     </section>
     <!-- end of classes -->
